crates/quarto-math/tests/integration/snapshots/integration__normalize__ast__delimiters__left-right-angle.snap
---
source: crates/quarto-math/tests/integration/normalize.rs
expression: rendered(&n)
---
row @0..28
  delimited "⟨" "⟩" @0..28
    row @13..14
      run "x" @13..14
-- problems --
