crates/quarto-math/tests/integration/snapshots/integration__normalize__ast__delimiters__left-right-brace.snap
---
source: crates/quarto-math/tests/integration/normalize.rs
expression: rendered(&n)
---
row @0..18
  delimited "{" "}" @0..18
    row @8..9
      run "x" @8..9
-- problems --
