crates/quarto-math/tests/integration/snapshots/integration__normalize__ast__delimiters__left-right-floor.snap
---
source: crates/quarto-math/tests/integration/normalize.rs
expression: rendered(&n)
---
row @0..38
  delimited "⌊" "⌋" @0..38
    row @13..24
      frac Bar @13..24
        row @18..21
          run "n" @19..20
        row @21..24
          run "2" @22..23
-- problems --
