crates/quarto-math/tests/integration/snapshots/integration__normalize__ast__delimiters__left-right-null-left.snap
---
source: crates/quarto-math/tests/integration/normalize.rs
expression: rendered(&n)
---
row @0..16
  delimited "(" "." @0..16
    row @7..8
      run "x" @7..8
-- problems --
